force-app/main/default/objects/under_construction__c/under_construction__c.object-meta.xml
<CustomObject>
    <label>under construction</label>
    <nameField>
        <label>under construction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>under constructions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>