force-app/main/default/objects/under_construction__c/fields/Bus__c.field-meta.xml
<CustomField>
    <fullName>Bus__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bus</label>
    <referenceTo>Bus__c</referenceTo>
    <relationshipLabel>under constructions</relationshipLabel>
    <relationshipName>under_constructions</relationshipName>
    <type>Lookup</type>
</CustomField>