force-app/main/default/objects/under_construction__c/fields/Bus_number__c.field-meta.xml
<CustomField>
    <fullName>Bus_number__c</fullName>
    <label>Bus number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>