force-app/main/default/objects/under_construction__c/fields/Bus_staff__c.field-meta.xml
<CustomField>
    <fullName>Bus_staff__c</fullName>
    <label>Bus staff</label>
    <length>20</length>
    <type>Text</type>
</CustomField>