force-app/main/default/objects/under_construction__c/fields/Specific_part_reason__c.field-meta.xml
<CustomField>
    <fullName>Specific_part_reason__c</fullName>
    <label>Specific part (reason)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tyres</fullName>
            </value>
            <value>
                <fullName>Seats</fullName>
            </value>
            <value>
                <fullName>Interial damage</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>